--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,6 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <p>Boilerplate Created by <a href="https://www.jeremybrd.dev">Jeremy Barbedienne</a></p>
   </body>
 </html>
