add user instructions

--- a/src/template.html
+++ b/src/template.html
@@ -10,5 +10,6 @@
 
   <body>
     <p>Boilerplate Created by <a href="https://www.jeremybrd.dev">Jeremy Barbedienne</a></p>
+    <p> >> 'coucou' should aprear in the console, if not JS is not working, please check index.js 👀</p>
   </body>
 </html>
